add styling for cocktails

--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
                         <i class="fas fa-heart"></i>
 
                   </div>
-            </div>
-            <div class="card">
-                  <img src="https://www.thecocktaildb.com/images/media/drink/2x8thr1504816928.jpg" alt="cocktail2">
-                  <h4>cocktail2</h4>
-                  <i class="fas fa-heart"></i>
-
-
+                  <div class="card">
+                        <img src="https://www.thecocktaildb.com/images/media/drink/2x8thr1504816928.jpg"
+                              alt="cocktail2">
+                        <h4>cocktail2</h4>
+                        <i class="fas fa-heart"></i>
+                  </div>
             </div>
       </div>
       <div id="new">
