testing display with more images

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                         <h4>cocktail2</h4>
                         <i class="fas fa-heart"></i>
                   </div>
+                  <div class="card">
+                        <img src="https://www.thecocktaildb.com/images/media/drink/2x8thr1504816928.jpg"
+                              alt="cocktail3">
+                        <h4>cocktail3</h4>
+                        <i class="fas fa-heart"></i>
+                  </div>
+                  <div class="card">
+                        <img src="https://www.thecocktaildb.com/images/media/drink/2x8thr1504816928.jpg"
+                              alt="cocktail4">
+                        <h4>cocktail4</h4>
+                        <i class="fas fa-heart"></i>
+                  </div>
             </div>
       </div>
       <div id="new">
