create function for appending html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <div id="local">
             <h3>Local</h3>
       </div>
+      <script src="assets/js/script.js"></script>
 </body>
 
 </html>
