rendered html to page

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
       </div>
       <div id="new">
             <h3>New</h3>
+            <div class="disp"></div>
       </div>
       <div id="local">
             <h3>Local</h3>
+            <div class="disp"></div>
       </div>
       <script src="assets/js/script.js"></script>
 </body>
